fix problem with layout bug by setting continers and divs to 100% width to fill web browser page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:wght@500&family=Source+Sans+Pro&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +14,14 @@ a {
 body {
     font-family: source sans pro, sans-serif;
     font-weight: 400;
+    overflow-x: hidden;
+    width: 100%;
+}
+
+header {
+    max-width: 100%;
+    overflow-x: hidden;
+
 }
 
 h1,
@@ -23,17 +32,22 @@ h3 {
     letter-spacing: 3px;
 }
 
+.body-container {
+    width: 100%;
+    overflow-x: hidden;
+    
+}
+
 .header-container {
     background-color: #3E4144;
-    border: #303030 solid 2px;
     height: 150px;
     display: flex;
     justify-content: center;
     position: fixed;
     width: 100%;
     z-index: 1000;
+    
 }
-
 
 /* logo */
 
@@ -46,6 +60,7 @@ h3 {
     color: white;
     text-shadow: 2px 2px 5px black;
     text-decoration: none;
+    max-width: 100%;
     
 }
 
@@ -62,6 +77,7 @@ h3 {
     margin-top: 10px;
     text-align: center;
     text-decoration: none;
+    max-width: 100%;
 
 }
 
@@ -103,10 +119,10 @@ a:active {
 /* hero image for a large background of first page */
 
 #hero-image {
-    height: 1300px;
+    height: 1200px;
     width: 100%;
     background: url('../images/hero-image-stadium.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     position: relative;
 
@@ -126,6 +142,7 @@ a:active {
     justify-content: center;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.212);
+    
 }
 
 /* text describing the different pages of the website with clickable hyperlinks to them */
@@ -171,10 +188,15 @@ a:active {
 /* website description of what it is and what you can do */
 
 #website-description {
-    width: 100%;
+    width: 50%;
     height: 700px;
     border: #303030 solid 4px;
     font-size: 150%;
+    margin: 0px 200px 200px 200px; 
+    position: relative;
+    justify-content: center;
+    align-items: center;
+ 
 }
 
 #website-description h2 {
